SAK-19419 findbugs static code review for common
git-svn-id: https://source.sakaiproject.org/svn/common/trunk@84140 66ffb92e-73f9-0310-93c1-f5514f145a0a